Deer loot table & venison, new cursed ring tooltip, replaced vanilla ore textures

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,19 @@
 *.log
 minecraftinstance.json
 *.jar
+*.gz
+*.tbl
+*.abc
+BotaniaVars.dat
+options.txt
+patchouli_data.json
+reauth.toml
+realms_persistence.json
+knownkeys.txt
+usercache.json
+usernamecache.json
+logs/
+mod_data
+saves/
+mods/
+resourcepacks/
