--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -10,7 +10,6 @@ BlockCarpentry
 Charm
 Chisels & bits
 Clef
-Crafting Station
 Create
 Curios API
 Danny's Expansion
@@ -21,7 +20,6 @@ Enigmatic Legacy
 Environmental
 Farmer's Delight
 Farmers Delight Cookbook
-Glassential
 Goblin Traders
 Guard Villagers
 Infernal Expansion
@@ -45,15 +43,12 @@ Supplementaries
 Tetra
 Thatched
 The One Probe
-Tiny Coal
-Toad Terror
 Upgrade Aquatic
 Abundance
 Bayou Blues
 Emendatus Enigmatica
 Nature's Compass
 Biomes O' Plenty
-Meet Your Fight
 The Undergarden
 Paraglider
 Create Crafts & Additions
@@ -64,7 +59,6 @@ FastFurnace
 FastWorkbench
 Hats
 Dude! Where's my Horse?
-Progressive Bosses
 Botania
 The Conjurer
 Decorative Blocks Abnormals
@@ -74,3 +68,10 @@ Origins
 Waystones
 Comfortable Nether
 Soulbound
+Better Badlands
+The Twilight Forest
+Glassential
+Meet Your Fight
+Progressive Bosses
+Tiny Coal
+Toad Terror
