blacklisted twilight forest venison

--- a/config/jei/blacklist.cfg
+++ b/config/jei/blacklist.cfg
@@ -1358,3 +1358,5 @@ emendatusenigmatica:enigmatic_fortunizer
 environmental:rice
 environmental:rice_sack
 emendatusenigmatica:nickel_ingot
+twilightforest:raw_venison
+twilightforest:cooked_venison
