--- a/config/quark-common.toml
+++ b/config/quark-common.toml
@@ -241,7 +241,7 @@
 	"Seed Pouch" = true
 	"Pathfinder Maps" = true
 	"Bottled Cloud" = true
-	"Color Runes" = false
+	"Color Runes" = true
 	"Ancient Tomes" = true
 	"Slime In A Bucket" = true
 	Camera = true
