--- a/config/jei/blacklist.cfg
+++ b/config/jei/blacklist.cfg
@@ -1360,3 +1360,4 @@ environmental:rice_sack
 emendatusenigmatica:nickel_ingot
 twilightforest:raw_venison
 twilightforest:cooked_venison
+emendatusenigmatica:quartz_ore
