Cleaned up BetterEnd recipes & removed smelter

--- a/config/jei/blacklist.cfg
+++ b/config/jei/blacklist.cfg
@@ -1365,3 +1365,5 @@ botania:orechid_ignem
 botania:orechid
 botania:floating_orechid
 botania:floating_orechid_ignem
+outvoted:prismarine_rod
+betterendforge:end_stone_smelter
