Added more mods

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -62,7 +62,6 @@ Dude! Where's my Horse?
 Botania
 The Conjurer
 Decorative Blocks Abnormals
-YUNG's Better Portals
 Antique Atlas
 Origins
 Waystones
@@ -75,3 +74,4 @@ Meet Your Fight
 Progressive Bosses
 Tiny Coal
 Toad Terror
+Enhanced Mushrooms
