--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ optionsof.txt
 crash-reports/
 servers.dat
 XaeroWorldMap/
+XaeroWaypoints/
+screenshots/
+TrashSlotSaveState.json
+config/ichunutil/
