--- a/config/jei/blacklist.cfg
+++ b/config/jei/blacklist.cfg
@@ -144,7 +144,6 @@ emendatusenigmatica:dimensional_gravel_ore
 emendatusenigmatica:tin_gravel_ore
 emendatusenigmatica:zinc_gravel_ore
 emendatusenigmatica:iron_netherrack_ore
-emendatusenigmatica:gold_netherrack_ore
 emendatusenigmatica:certus_quartz_gravel_ore
 emendatusenigmatica:coal_netherrack_ore
 emendatusenigmatica:cinnabar_gravel_ore
@@ -159,7 +158,6 @@ emendatusenigmatica:zinc_netherrack_ore
 emendatusenigmatica:certus_quartz_netherrack_ore
 emendatusenigmatica:charged_certus_quartz_netherrack_ore
 emendatusenigmatica:redstone_netherrack_ore
-emendatusenigmatica:quartz_netherrack_ore
 emendatusenigmatica:fluorite_netherrack_ore
 emendatusenigmatica:bitumen_netherrack_ore
 emendatusenigmatica:copper_netherrack_ore
@@ -188,7 +186,6 @@ emendatusenigmatica:lapis_blackstone_ore
 emendatusenigmatica:certus_quartz_blackstone_ore
 emendatusenigmatica:charged_certus_quartz_blackstone_ore
 emendatusenigmatica:redstone_blackstone_ore
-emendatusenigmatica:quartz_blackstone_ore
 emendatusenigmatica:fluorite_blackstone_ore
 emendatusenigmatica:bitumen_blackstone_ore
 emendatusenigmatica:copper_blackstone_ore
@@ -201,7 +198,6 @@ emendatusenigmatica:sulfur_blackstone_ore
 emendatusenigmatica:copper_basalt_ore
 emendatusenigmatica:bitumen_basalt_ore
 emendatusenigmatica:fluorite_basalt_ore
-emendatusenigmatica:quartz_basalt_ore
 emendatusenigmatica:redstone_basalt_ore
 emendatusenigmatica:charged_certus_quartz_basalt_ore
 emendatusenigmatica:certus_quartz_basalt_ore
@@ -831,7 +827,6 @@ emendatusenigmatica:potassium_nitrate_gem
 emendatusenigmatica:arcane_gem
 emendatusenigmatica:dimensional_gem
 emendatusenigmatica:coke_gem
-emendatusenigmatica:silicon_gem
 emendatusenigmatica:emerald_dust
 emendatusenigmatica:lapis_dust
 emendatusenigmatica:quartz_dust
@@ -1367,3 +1362,16 @@ botania:floating_orechid
 botania:floating_orechid_ignem
 outvoted:prismarine_rod
 betterendforge:end_stone_smelter
+refinedstorage:silicon
+minecraft:emerald_ore
+minecraft:nether_quartz_ore
+minecraft:redstone_ore
+minecraft:diamond_ore
+minecraft:lapis_ore
+minecraft:coal_ore
+minecraft:iron_ore
+minecraft:gold_ore
+emendatusenigmatica:quartz_blackstone_ore
+emendatusenigmatica:quartz_basalt_ore
+environmental:fried_egg
+minecraft:nether_gold_ore
