--- a/config/progressivebosses-common.toml
+++ b/config/progressivebosses-common.toml
@@ -1,32 +1,23 @@
+"Enable Wither" = true
+"Enable Dragon" = true
 
 [Wither]
+	#Bonus Experience and Drops
+	"Enable Rewards" = true
+	#How difficulty is handled for the Wither. Disabling this "Feature" will disable all the Dragon changes.
+	"Enable Difficulty Settings" = true
+	#Makes the Wither smarter (will no longer try to stand on the player's head ...) and attack faster below Half Health
+	"Enable Attack" = true
+	#Handles the Damage Resistances and Vulnerabilities
+	"Enable Resistances & Vulnerabilities" = true
+	#Bonus Health and Bonus regeneration. The feature even fixes the Wither health bar not updating on spawn.
+	"Enable Health" = true
+	#Wither will spawn deadly (and tall) Minions
+	"Enable Minions" = true
+	#Handles various small features, such as the explosion
+	"Enable Misc" = true
 
-	[Wither.Minions]
-		#Minimum Health with which Wither Minions can spawn with
-		#Range: 0 ~ 1024
-		"Min Health" = 10
-		#As the Wither starts spawning Minions, every how much difficulty the Wither will spawn one more Minion
-		#Range: > 1
-		"Difficulty to Spawn One More Minion" = 2
-		#Maximum amount of Wither Minions that can be around the Wither in a 24 block radius. After this number is reached the Wither will stop spawning minions. Set to 0 to disable this check
-		#Range: > 1
-		"Max Minions Around" = 16
-		#After how many maximum ticks (20 ticks = 1 second) the wither will try to spawn Minions
-		#Range: > 1
-		"Max Cooldown" = 400
-		#Maximum number of Wither Minions that a Wither can spawn. Set to 0 to disable Wither Minions
-		#Range: > 0
-		"Max Minions Spawned" = 8
-		#Minimum Health with which Wither Minions can spawn with
-		#Range: 0 ~ 1024
-		"Max Health" = 20
-		#After how many minimum ticks (20 ticks = 1 second) the Wither will try to spawn Minions. This is reduced by the current percentage health of the Wither, down to a minimum of 25% this value
-		#Range: > 1
-		"Min Cooldown" = 200
-		#Minimum Difficulty required for the Wither will start spawning Wither Minions during the fight
-		#Range: > 0
-		"Difficulty to Spawn Minions" = 1
-
+	#Bonus Health and Bonus regeneration. The feature even fixes the Wither health bar not updating on spawn.
 	[Wither.Health]
 		#Increase Wither's Health by this value per difficulty
 		#Range: 0.0 ~ 1.7976931348623157E308
@@ -38,33 +29,10 @@
 		#Range: 0.0 ~ 1.7976931348623157E308
 		"Maximum Bonus Regeneration" = 1.0
 
-	[Wither.Armor]
-		#How much armor points will have Withers per Difficulty
-		#Range: 0.0 ~ 30.0
-		"Bonus Armor per Difficulty" = 0.25
-		#Maximum armor that Withers can spawn with
-		#Range: 0.0 ~ 30.0
-		"Maximum Armor" = 10.0
-
-	[Wither.Rewards]
-		#How much more experience (percentage) will Wither drop per Difficulty. The percentage is additive (e.g. with this set to 10%, 7 withers spawned = 70% more experience)
-		#Range: 0.0 ~ 1.7976931348623157E308
-		"Bonus Experience per Difficulty" = 10.0
-		#Maximum chance to get a Nether Star shard.
-		#Range: 0.0 ~ 100.0
-		"Shards Max Chance" = 50.0
-		#Maximum amount of shards that you can get from a Wither.
-		#Range: > 0
-		"Shards Max Count" = 8
-		#Difficulty Divider for how many times the game tries to drop one more shard. Given this value x you get ((difficulty / x) + 1) times to get one or more shard.
-		#E.g. By default, at 10 withers killed you have 6 times 20% chance to drop a shard.
-		#Range: > 1
-		"Shards Divider" = 2
-		#How much chance per Difficulty to get a Nether Star Shard from killing the Wither
-		#Range: 0.0 ~ 100.0
-		"Shards per Difficulty" = 2.0
-
+	#Handles various small features, such as the explosion
 	[Wither.Misc]
+		#The Wither will try to not get stuck in bedrock for easy killing.
+		"Prevent Getting Stuck" = true
 		#At this difficulty the Wither Explosion will cause fire. Set to -1 to disable.
 		#Range: > -1
 		"Explosion Causes Fire at Difficulty" = 10
@@ -72,97 +40,108 @@
 		#Range: 0.0 ~ 4.0
 		"Explosion Power Bonus" = 0.08
 
-	[Wither.General]
+	#Makes the Wither smarter (will no longer try to stand on the player's head ...) and attack faster below Half Health
+	[Wither.Attack]
+		#The middle head will attack twice as fast when the Wither drops below half health.
+		"Twice Attack Speed on Half Health" = true
+		#If the AI changes should be applied to the first wither spawned too.
+		"Apply to Vanilla Wither" = true
+
+	#Handles the Damage Resistances and Vulnerabilities
+	[Wither."Resistances & Vulnerabilities"]
+		#Cap for 'Damage reduction per Difficulty below half health'
+		#Range: 0.0 ~ 100.0
+		"Max Damage reduction per Difficulty below half health" = 35.0
+		#Bonus magic damage based off missing health. 150 means that every 150 missing health the damage will be amplified by 100%. E.g. The difficulty = 0 Wither (with 300 max health) is at half health (so it's missing 150hp), on magic damage he will receive 'magic_damage * (missing_health / magic_damage_bonus + 1)' = 'magic_damage * (150 / 150 + 1)' = 'magic_damage * 2'.
+		#Range: 0.0 ~ 1024.0
+		"Magic Damage Bonus" = 200.0
+		#Percentage Damage Resistance as the Wither drops below half health.
+		#Range: 0.0 ~ 100.0
+		"Damage reduction per Difficulty below half health" = 4.0
+
+	#Wither will spawn deadly (and tall) Minions
+	[Wither.Minions]
+		#Percentage bonus speed per difficulty.
+		#Range: 0.0 ~ 1.7976931348623157E308
+		"Bonus Movement Speed Per Difficulty" = 1.0
+		#As the Wither starts spawning Minions, every how much difficulty the Wither will spawn one more Minion
+		#Range: > 0
+		"Bonus Minion Every Difficulty" = 2
+		#Maximum amount of Minions that can be around the Wither in a 32 block radius. After this number is reached the Wither will stop spawning minions. Set to 0 to disable this check
+		#Range: > 0
+		"Max Minions Around" = 16
+		#Maximum Minions spawned by the Wither
+		#Range: > 0
+		"Max Minions Spawned" = 8
+		#Maximum ticks (20 ticks = 1 seconds) after Minions can spwan.
+		#Range: > 0
+		"Maximum Cooldown" = 480
+		#Min and Max cooldowns are multiplied by this value when the Wither drops below half health. Set to 1 to not change the cooldown when the wither's health drops below half.
+		#Range: 0.0 ~ 1.7976931348623157E308
+		"Cooldown Multiplier Below Half Health" = 0.5
+		#Wither Minions will die when the Wither that spawned them dies. (Note: only minions in a 128 blocks radius will be killed)
+		"Kill Minions on Wither Death" = true
+		#At which difficulty the Wither starts spawning Minions
+		#Range: > 0
+		"Minion at Difficulty" = 1
+		#Minimum ticks (20 ticks = 1 seconds) after Minions can spwan.
+		#Range: > 0
+		"Minimum Cooldown" = 240
+
+		[Wither.Minions.Equipment]
+			#Chance for the Wither Minion to spawn with a bow when Wither's below Half Health
+			#Range: 0.0 ~ 100.0
+			"Bow Chance Below Half Health" = 0.08
+			#Wither Minions will spawn with a Stone Sword
+			"Has Sword" = true
+			#Chance for the Wither Minion to spawn with a bow when Wither's above Half Health
+			#Range: 0.0 ~ 100.0
+			"Bow Chance Over Half Health" = 0.6
+
+	#How difficulty is handled for the Wither. Disabling this "Feature" will disable all the Dragon changes.
+	[Wither."Difficulty Settings"]
 		#If true and there are more players around the Wither, the Wither will have his stats based on the sum of both players difficulty. If false, the Wither stats will be based on the average of the difficulty of the players around
 		"Sum Spawned Wither Difficulty" = false
-		#The Maximum difficulty (times spawned) reachable by Wither. By default is set to 72 because the Wither reaches the maximum amount of health (1024, handled by Minecraft. Some mods can increase this) after 72 withers spawned.
+		#The Maximum difficulty (times spawned) reachable by Wither. By default is set to 72 because the Wither reaches the maximum amount of health (1024, capped by Minecraft. Some mods can increase this) after 72 withers spawned.
 		#Range: > 1
 		"Max Difficulty" = 72
+		#How much difficulty will players start with when joining a world?
+		#Range: > 0
+		"Starting Difficulty" = 0
 		#How much blocks from wither will be scanned for players to check for difficulty
 		#Range: > 16
-		"Spawn Radius Player Check" = 96
+		"Spawn Radius Player Check" = 128
 
-[Dragon]
-
-	[Dragon.Larvae]
-		#For each difficulty the Larvae spawn cooldown min and max values will be reduced by this value (E.g. with 10 difficulty and this set to 5, the Larvae cooldown min will be 550 and max 1150)
-		#Range: > 0
-		"Cooldown Reduction Per Difficulty" = 10
-		#As the Ender Dragon Difficulty reaches this value she will be spawning a Larva during the fight. Plus every time Difficulty is a multiplier of this value the Ender Dragon will spawn one more Larva
-		#Range: > 1
-		"Difficulty to Spawn One More Larva" = 1
-		#Maximum number of Larvae that an Ender Dragon can spawn. Set to 0 to disable Dragon's Larvae
-		#Range: > 0
-		"Max Larvae Spawned" = 6
-		#After how many maximum ticks (20 ticks = 1 second) the Ender Dragon will try to spawn Larvae
-		#Range: > 1
-		"Max Cooldown" = 1200
-		#After how many minimum ticks (20 ticks = 1 second) the Ender Dragon will try to spawn Larvae
-		#Range: > 1
-		"Min Cooldown" = 1050
-
-	[Dragon.Health]
-		#Increase Ender Dragon's Health by this value per difficulty
-		#Range: 0.0 ~ 1.7976931348623157E308
-		"Health Bonus per Difficulty" = 10.0
-		#How many half hearts will the Ender Dragon regen per difficulty. This doesn't affect the regeneration of the Ender Dragon from Crystals. (E.g. With 6 Dragons killed, the Dragon will heal 0.6 health per second without Crystals).
-		#Range: 0.0 ~ 1.7976931348623157E308
-		"Bonus Regeneration per Difficulty" = 0.025
-		#Maximum bonus regeneration per second given by "Bonus Regeneration per Difficulty". Set to 0 to disable bonus health regeneration. This doesn't affect the regeneration of the Ender Dragon from Crystals. It's not recommended to go over 1.0f without mods that adds stronger things to kill the Ender Dragon
-		#Range: 0.0 ~ 1.7976931348623157E308
-		"Maximum Bonus Regeneration" = 0.5
-
-	[Dragon.Minion]
-		#For each difficulty the Minion spawn cooldown min and max values will be reduced by this value (E.g. with 10 difficulty and this set to 10, the Minion cooldown min will be 1100 and max 1700)
-		#Range: > 0
-		"Cooldown Reduction Per Difficulty" = 10
-		#After how many maximum ticks (20 ticks = 1 second) the Ender Dragon will try to spawn a Minion
-		#Range: > 1
-		"Max Cooldown" = 1800
-		#After how many minimum ticks (20 ticks = 1 second) the Ender Dragon will try to spawn a Minion
-		#Range: > 1
-		"Min Cooldown" = 1200
-		#Minimum Difficulty required for the Ender Dragon to start spawning Dragon's Minions during the fight. Set to -1 to disable Dragon's Minions spawning
-		#Range: > 0
-		"Difficulty to Spawn Minions" = 1
-
-	[Dragon.Rewards]
-		#How much more experience (percentage) will Ender Dragon drop per Difficulty. The percentage is additive (e.g. with this set to 10%, 7 Ender Dragons killed = 70% more experience)
+	#Bonus Experience and Drops
+	[Wither.Rewards]
+		#How much more experience (percentage) will Wither drop per Difficulty. The percentage is additive (e.g. with this set to 10%, 7 withers spawned = 70% more experience)
 		#Range: 0.0 ~ 1.7976931348623157E308
 		"Bonus Experience per Difficulty" = 10.0
-		#Should the first Dragon killed per Player always drop the egg and the first Dragon experience (12k instead of 500)? If true means that every player will get the Dragon Egg as they kill their first Dragon (yes even when 2 players kill the dragon)
-		"First Dragon per Player" = true
+		#A list of drops for the Withers. Entry format: item,amount,difficulty_required,chance,difficulty_mode,chance_mode
+		#item: item id
+		#amount: amount
+		#difficulty_required: the amount of difficulty required for the item to drop, works differently based on mode
+		#chance: chance for the drop to happen
+		#difficulty_mode:
+		#* MINIMUM: will try to drop the item when the difficulty matches or is higher
+		#chance_mode:
+		#* FLAT: chance is the percentage chance for the item to drop if the difficulty criteria matches
+		#* SCALING: each point of difficulty >= 'difficulty to drop the item' will be multiplied by the chance (e.g. chance 2% and difficulty 10, difficulty required 5, chance to drop the item will be chance * (difficulty - difficulty_required + 1) = 2% * (10 - 5 + 1) = 12%)
+		#By default Withers have 2% chance per difficulty >= 2 to drop 1 shard + 4% chance per difficulty >= 4 to drop 2 shards + 8% chance per difficulty >= 8 to drop 4 shards.
+		Drops = ["progressivebosses:nether_star_shard,1,2,2,MINIMUM,SCALING", "progressivebosses:nether_star_shard,2,4,4,MINIMUM,SCALING", "progressivebosses:nether_star_shard,3,6,6,MINIMUM,SCALING", "progressivebosses:nether_star_shard,4,8,8,MINIMUM,SCALING"]
 
-	[Dragon.General]
+[Dragon]
+	#How difficulty is handled for the Dragon. Disabling this "Feature" will disable all the Dragon changes.
+	"Enable Difficulty Settings" = true
+
+	#How difficulty is handled for the Dragon. Disabling this "Feature" will disable all the Dragon changes.
+	[Dragon."Difficulty Settings"]
 		#The Maximum difficulty (times killed) reachable by Ender Dragon. By default is set to 82 because the Ender Dragon reaches the maximum amount of health (1024, handled by Minecraft. Some mods can increase this) after 82 Dragons killed.
 		#Range: > 1
 		"Max Difficulty" = 82
+		#How much difficulty will players start with when joining a world?
+		#Range: > 0
+		"Starting Difficulty" = 0
 		#If true and there are more players around the Dragon, she will have his stats based on the sum of both players' difficulty. If false, the Dragon stats will be based on the average of the difficulty of the players around.
 		"Sum Killed Dragons Difficulty" = false
-
-	[Dragon.Attack]
-		#How much more percentage damage does the Ender Dragon deal per difficulty? Setting to 0 will disable this feature.
-		#Range: 0.0 ~ 1.7976931348623157E308
-		"Bonus Attack Damage" = 10.0
-		#Normally the Ender Dragon spits fireballs when a Crystal is destroyed and rarely during the fight. With this active she has a chance each tick (1/20th of second) when roaming around to spit a fireball.\nThis defines the chance to attack the player each tick when all the crystals were destoyed and the difficulty is 'Max Chance at Difficulty' or higher. The actual formula is\n(this_value% / 'Max Chance at Difficulty') * difficulty * (1 / remaining_crystals).\nSetting to 0 will disable this feature.
-		#Range: 0.0 ~ 1.7976931348623157E308
-		"Fireball Max Chance" = 1.5
-		#Normally the Ender Dragon attacks only when leaving the center platform. With this active she has a chance each tick (1/20th of second) when roaming around to attack the player.\nThis defines the chance to attack the player each tick when all the crystals were destoyed and the difficulty is 'Max Chance at Difficulty' or higher. The actual formula is\n(this_value% / 'Max Chance at Difficulty') * difficulty * (1 / remaining_crystals).\nSetting to 0 will disable this feature.
-		#Range: 0.0 ~ 1.7976931348623157E308
-		"Charge Player Max Chance" = 1.0
-		#Defines at which difficulty the Dragon has max chance to attack or spit fireballs when all crystals are destroyed (see 'Fireball Max Chance' and 'Charge Player Max Chance')
-		#Range: 0.0 ~ 1.7976931348623157E308
-		"Max Chance at Difficulty" = 16.0
-		#How much more percentage damage does the Ender Dragon's Acid Pool per difficulty? Setting to 0 will disable this feature.
-		#Remember that in vanilla the Acid Pool is magic damage and only Protection enchantment can reduce it.
-		#Range: 0.0 ~ 1.7976931348623157E308
-		"Bonus Acid Pool Damage" = 10.0
-
-	[Dragon.Crystal]
-		#At this difficulty more crystals will start to appear inside obsidian towers, starting from the lowest ones. -1 will disable this feature.
-		#Range: > -1
-		"More Crystals at Difficulty" = 8
-		#At this difficulty cages will start to appear around other crystals too, starting from the lowest ones. -1 will disable this feature.
-		#Range: > -1
-		"More Cages at Difficulty" = 1
 
