--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -67,3 +67,7 @@ rats:cauldron
 rats:chef_rat
 rats:gemcutter_rat
 waystones:warp_plate
+cobblegenrandomizer:basalt_gen
+cobblegenrandomizer:cobble_gen
+cobblegenrandomizer:custom_gen
+cobblegenrandomizer:stone_gen
