--- a/config/jei/blacklist.cfg
+++ b/config/jei/blacklist.cfg
@@ -420,3 +420,7 @@ enigmaticlegacy:enchantment_transposer
 enigmaticlegacy:infinimeal
 enigmaticlegacy:enigmatic_amulet
 enigmaticlegacy:forbidden_axe
+betterendforge:ender_ore
+enigmaticlegacy:iron_ring
+enigmaticlegacy:ender_ring
+enigmaticlegacy:gem_ring
