--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -8,8 +8,6 @@ Antique Atlas
 Archer's Paradox
 Atmospheric
 Autumnity
-Backpacked
-Backpacker
 Bamboo Blocks
 Bayou Blues
 Better Badlands
@@ -30,7 +28,6 @@ Compote
 Craftable Deeds
 Create
 Create Confectionery
-Create Deco
 Create Plus
 Curios API
 Danny's Expansion
@@ -53,6 +50,7 @@ Goblin Traders
 Guard Villagers
 Hats
 Hunter Illager
+Improved Backpacks
 Infernal Expansion
 Kobolds
 KubeJS
