--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -21,6 +21,10 @@ botania:pure_daisy
 botania:runic_altar
 botania:terra_plate
 chisel:chiseling
+cobblegenrandomizer:basalt_gen
+cobblegenrandomizer:cobble_gen
+cobblegenrandomizer:custom_gen
+cobblegenrandomizer:stone_gen
 compote:composting
 create:automatic_brewing
 create:automatic_packing
@@ -52,6 +56,7 @@ environmental:sawing
 farmersdelight:cooking
 farmersdelight:cutting
 farmersdelight:decomposition
+improvedbackpacks:sewing
 jeed:effects
 jei:information
 jeresources:dungeon
@@ -67,7 +72,3 @@ rats:cauldron
 rats:chef_rat
 rats:gemcutter_rat
 waystones:warp_plate
-cobblegenrandomizer:basalt_gen
-cobblegenrandomizer:cobble_gen
-cobblegenrandomizer:custom_gen
-cobblegenrandomizer:stone_gen
