Custom Origin icons
Crab, Penguin, and Moth icons

--- a/config/pehkui-common.toml
+++ b/config/pehkui-common.toml
@@ -14,7 +14,7 @@
 	scaledMotion = true
 	scalesKeptOnRespawn = []
 	enableDebugCommands = false
-	enableCommands = false
+	enableCommands = true
 
 	[general.scale_limits]
 
