Omnivore foods no longer edible by all origins & updated/removed mods
Fixes #6

--- a/config/storagedrawers-common.toml
+++ b/config/storagedrawers-common.toml
@@ -1,7 +1,7 @@
 
 [General]
 	#List of rules in format "domain:item1, domain:item2, n".
-	#Causes a compacting drawer convert n of item1 into 1 of item2.
+	#Creates a compacting drawer rule to convert 1 of item1 into n of item2.
 	compactingRules = ["minecraft:clay, minecraft:clay_ball, 4"]
 	enableUI = true
 	debugTrace = false
