--- a/config/stylisheffects-client.toml
+++ b/config/stylisheffects-client.toml
@@ -24,11 +24,17 @@
 		#Alpha value for effect widgets.
 		#Range: 0.0 ~ 1.0
 		widget_alpha = 1.0
-		#Render active status effects in every container, not just in the player inventory.
+		#Render active status effects in every menu screen, not just in the player inventory.
 		effects_everywhere = false
 		#Effect renderer to be used.
 		#Allowed Values: NONE, COMPACT, VANILLA
 		renderer_type = "COMPACT"
+		#Respect vanilla's "hideParticles" flag which prevents a status effect from showing.
+		respect_hide_particles = false
+		#Exclude certain menus from showing active status effects. Useful when effect icons overlap with other screen elements.
+		menu_blacklist_raw = ["curios:curios_container"]
+		#Print menu type to game chat whenever a new menu screen is opened. Only intended to find menu types to be added to "menuBlacklistRaw".
+		debug_container_types = false
 
 	[renderers.hud_renderer]
 		#Maximum amount of status effects rendered in a single row.
@@ -58,6 +64,8 @@
 		#Effect renderer to be used.
 		#Allowed Values: NONE, COMPACT, VANILLA
 		renderer_type = "COMPACT"
+		#Respect vanilla's "hideParticles" flag which prevents a status effect from showing.
+		respect_hide_particles = true
 
 [widgets]
 
