Enigmatic Legacy unobtainable items fix

--- a/config/jei/blacklist.cfg
+++ b/config/jei/blacklist.cfg
@@ -424,3 +424,4 @@ betterendforge:ender_ore
 enigmaticlegacy:iron_ring
 enigmaticlegacy:ender_ring
 enigmaticlegacy:gem_ring
+enigmaticlegacy:earth_heart
