--- a/config/storagedrawers-common.toml
+++ b/config/storagedrawers-common.toml
@@ -12,7 +12,10 @@
 	#Half-depth drawers hold half those amounts.
 	baseStackStorage = 4
 	enableExtraCompactingRules = true
-	#Range: 1 ~ 50
+	#Controller range defines how far away a drawer can be connected
+	#on X, Y, or Z planes.  The default value of 50 gives the controller a very
+	#large range, but not beyond the chunk load distance.
+	#Range: 1 ~ 75
 	controllerRange = 12
 	enableSidedOutput = true
 
