Added Water Protection recipe & added more items to `momo:armor/helmets` tag

--- a/config/jei/blacklist.cfg
+++ b/config/jei/blacklist.cfg
@@ -425,3 +425,4 @@ enigmaticlegacy:iron_ring
 enigmaticlegacy:ender_ring
 enigmaticlegacy:gem_ring
 enigmaticlegacy:earth_heart
+twilightforest:helmet_crab_spawn_egg
