--- a/kubejs/data/momo_origins/powers/happy_feet.json
+++ b/kubejs/data/momo_origins/powers/happy_feet.json
@@ -1,63 +1,43 @@
 {
 	"type": "origins:action_on_callback",
 	"execute_chosen_when_orb": true,
-	"entity_action_chosen": {
+	"entity_action_added": {
 		"type": "origins:and",
 		"actions": [
 			{
 				"type": "origins:execute_command",
 				"permission_level": 4,
-				"command": "scale set pehkui:height 0.5"
+				"command": "scale set pehkui:height 0.5 @s"
 			},
 			{
 				"type": "origins:execute_command",
 				"permission_level": 4,
-				"command": "scale set pehkui:width 0.6"
+				"command": "scale set pehkui:width 0.6 @s"
 			},
 			{
 				"type": "origins:execute_command",
 				"permission_level": 4,
-				"command": "scale set pehkui:motion 0.9"
+				"command": "scale set pehkui:motion 0.9 @s"
 			}
 		]
 	},
-	"entity_action_respawned":{
+	"entity_action_respawn":{
 		"type": "origins:and",
 		"actions": [
 			{
 				"type": "origins:execute_command",
 				"permission_level": 4,
-				"command": "scale set pehkui:height 0.5"
+				"command": "scale set pehkui:height 0.5 @s"
 			},
 			{
 				"type": "origins:execute_command",
 				"permission_level": 4,
-				"command": "scale set pehkui:width 0.6"
+				"command": "scale set pehkui:width 0.6 @s"
 			},
 			{
 				"type": "origins:execute_command",
 				"permission_level": 4,
-				"command": "scale set pehkui:motion 0.9"
-			}
-		]
-	},
-	"entity_action_removed":{
-		"type": "origins:and",
-		"actions": [
-			{
-				"type": "origins:execute_command",
-				"permission_level": 4,
-				"command": "scale set pehkui:height 1"
-			},
-			{
-				"type": "origins:execute_command",
-				"permission_level": 4,
-				"command": "scale set pehkui:width 1"
-			},
-			{
-				"type": "origins:execute_command",
-				"permission_level": 4,
-				"command": "scale set pehkui:motion 1"
+				"command": "scale set pehkui:motion 0.9 @s"
 			}
 		]
 	},
@@ -67,17 +47,17 @@
 			{
 				"type": "origins:execute_command",
 				"permission_level": 4,
-				"command": "scale set pehkui:height 1"
+				"command": "scale reset pehkui:height @s"
 			},
 			{
 				"type": "origins:execute_command",
 				"permission_level": 4,
-				"command": "scale set pehkui:width 1"
+				"command": "scale reset pehkui:width @s"
 			},
 			{
 				"type": "origins:execute_command",
 				"permission_level": 4,
-				"command": "scale set pehkui:motion 1"
+				"command": "scale reset pehkui:motion @s"
 			}
 		]
 	},
