Blacklisted enigmatic legacy enchants

--- a/config/jei/blacklist.cfg
+++ b/config/jei/blacklist.cfg
@@ -425,3 +425,25 @@ enigmaticlegacy:iron_ring
 enigmaticlegacy:ender_ring
 enigmaticlegacy:gem_ring
 twilightforest:helmet_crab_spawn_egg
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.sharpshooter.lvl1]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.sharpshooter.lvl2]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.sharpshooter.lvl3]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.sharpshooter.lvl4]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.sharpshooter.lvl5]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.ceaseless.lvl1]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.nemesis_curse.lvl1]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.torrent.lvl1]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.torrent.lvl2]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.slayer.lvl1]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.wrath.lvl3]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.wrath.lvl4]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.wrath.lvl5]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.wrath.lvl2]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.wrath.lvl1]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.torrent.lvl5]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.torrent.lvl4]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.torrent.lvl3]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.slayer.lvl2]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.slayer.lvl3]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.slayer.lvl4]
+minecraft:enchanted_book:[enchantment.enigmaticlegacy.slayer.lvl5]
