--- a/config/lootr-common.toml
+++ b/config/lootr-common.toml
@@ -33,4 +33,6 @@ decay_modids = []
 decay_dimensions = []
 #overriding decay_loot_tables, decay_modids and decay_dimensions: all chests will decay after being opened for the first time
 decay_all = false
+#lootr will automatically log all unresolved tables (i.e., for containers that have a loot table associated with them but, for whatever reason, the lookup for this table returns empty). setting this option to true additionally informs players when they open containers.
+report_unresolved_tables = false
 
